--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login page</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h2>Login</h2>
+    <div class="container">
+        <h2>Login</h2>
     <form method = "POST" action="/login">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
@@ -15,5 +17,7 @@
         <button type="submit">Login</button>
     </form>
     <a href="/register">Don't have an account? Register here.</a>
+    </div>
+    
 </body>
 </html>
