--- a/public/style.css
+++ b/public/style.css
@@ -58,52 +58,73 @@ a:hover{
     text-decoration: underline;
 }
 
-.navbar {
-  width: 100%;
-  padding: 15px 40px;
-  background: #4e73df;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+.dashboard {
+  display: flex;
+  min-height: 100vh;
+}
+
+
+.sidebar {
+  width: 250px;
+  background: #1e293b;
   color: white;
+  padding: 20px;
+}
+
+.sidebar ul {
+  list-style: none;
+  margin-top: 20px;
+}
+
+.sidebar li {
+  margin: 15px 0;
+  cursor: pointer;
+}
+
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Navbar */
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: linear-gradient(90deg, #2563eb, #3b82f6);
+  color: white;
+  padding: 15px 25px;
 }
 
-.logout-btn {
+
+.content {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.card {
   background: white;
-  color: #4e73df;
-  padding: 8px 15px;
-  border-radius: 5px;
-  text-decoration: none;
-  font-weight: bold;
-  transition: 0.3s;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
+@media (max-width:768px){
+  .sidebar {
+    display:none;
 
-.logout-btn:hover {
-  background: #e2e6f5;
-}
-
-
-.dashboard-container {
-  height: calc(100vh - 70px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(135deg, #667eea, #764ba2);
-}
-
-.dashboard-card {
-  background: white;
-  padding: 50px;
-  border-radius: 15px;
-  text-align: center;
-  box-shadow: 0 15px 30px rgba(0,0,0,0.2);
-}
-
-.dashboard-card h1 {
-  margin-bottom: 15px;
-  color: #333;
-}
-
-.dashboard-card p {
-  color: #666;
+  }
+  .content {
+    grid-template-columns: 1fr;
+  }
 }
